Add an angular controller for the rentals list Define the 'rentals' angular module Add an angular router for transitioning from the properties list to a property Load the angular modules and controllers in application.js Delete a bunch of unused stuff from the stocks app

--- a/app/views/rental_properties/index.html
+++ b/app/views/rental_properties/index.html
@@ -1,12 +1,8 @@
-<div ng-controller="RentalPropertiesListController">
-  <span>Street</span>
-  <span>City</span>
-  <span>State</span>
-  <span>Zip Code</span>
-  <div ng-repeat="rental_property in rental_properties">
-    <span>{{rental_property.street}}</span>
-    <span>{{rental_property.city}}</span>
-    <span>{{rental_property.state}}</span>
-    <span>{{rental_property.zip_code}}</span>
-  </div>
-</div>
+<!DOCTYPE html>
+<html ng-app="rentals">
+<head>
+  <title>Rental Property Investment Calculator</title>
+</head>
+<body class="ui-view">
+</body>
+</html>
