Tighten up the inputs grid using a 24-column grid

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "vars";
+@import "mixins";
 
 body {
   font-size: 10px;
@@ -28,4 +30,8 @@ li {
 
 .align-right {
   text-align: right;
+}
+
+.grid-24-across {
+  @include column-adjust(24, $grid-gutter-width);
 }
