Make bold the column headers for estimated exit price and gain on sale

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -34,6 +34,10 @@ input:focus {
   border-bottom: thin solid;
 }
 
+.column-header {
+  font-weight: bold;
+}
+
 .no-bottom-border {
   border-bottom: none;
 }
