--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -42,6 +42,17 @@ input {
   }
 }
 
+.btn-sm {
+  font-size: 10px;
+  padding: 5px 5px;
+}
+
+.delete-property {
+  float: right;
+  padding-right: 10px;
+  color: #676767;
+}
+
 input:focus {
   outline: none;
 }
