--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,7 +7,12 @@
 @import "vars";
 @import "mixins";
 
+html, body {
+  height: 100%
+}
+
 body {
+  background-color: #EFEFEF;
   font-size: 9px;
 }
 
@@ -31,9 +36,23 @@ button:focus {
   outline: none;
 }
 
+.flexbox-parent {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.flexbox-item-grow {
+  flex: 1;
+}
+
 .container {
   width: 1125px;
   $grid-columns: 24;
+  background-color: white;
+  margin-bottom: 40px;
+  padding-bottom: 20px;
+  padding-top: 10px;
 }
 
 .margin-top-sm {
@@ -67,6 +86,44 @@ button:focus {
 .notification {
   float: right;
   color: white;
+}
+
+#sign-in-form {
+  margin: auto;
+  margin-top: 100px;
+  width: 380px;
+  height: 200px;
+  background-color: #5894b9;
+  padding-top: 25px;
+  color: white;
+
+  .form-group {
+    margin: auto;
+    width: 60%;
+
+    label {
+      margin-bottom: 0;
+    }
+  }
+
+  input {
+    height: 20px;
+    text-align: center;
+    border-radius: 0;
+    border: none;
+    margin-bottom: 10px;
+  }
+
+  .sign-in-btn {
+    margin: auto;
+    width: 100px;
+  }
+}
+
+#rental-properties {
+  .btn-sm {
+    width: 90px;
+  }
 }
 
 #new-property-row {
@@ -145,7 +202,6 @@ button:focus {
 
 .subsection-header {
   font-weight: bold;
-  text-align: center;
   background-color: #5894b9;
   color: white;
 }
