Add a favicon and a navbar

--- a/app/views/rental_properties/index.html
+++ b/app/views/rental_properties/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="rentals">
 <head>
-  <title>Rental Property Investment Calculator</title>
+  <title>Invest</title>
 </head>
 <body class="ui-view">
 </body>
