--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,6 @@ button:focus {
   background-color: white;
   margin-bottom: 40px;
   padding-bottom: 20px;
-  padding-top: 10px;
 }
 
 .margin-top-sm {
@@ -182,6 +181,17 @@ button:focus {
   box-shadow: none;
   border: 1px solid white;
   outline: 1px auto white;
+}
+
+.navbar {
+  background-color: white;
+  min-height: 20px;
+  margin-bottom: 5px;
+
+  button {
+    float: right;
+    width: 90px;
+  }
 }
 
 .btn-sm:hover {
