Show address on property page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -216,6 +216,15 @@ button:focus {
     float: right;
   }
 
+  .float-left {
+    float: left;
+  }
+
+  .property-address {
+    float: left;
+    padding-top: 4px;
+  }
+
   button {
     width: 90px;
   }
