--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,77 +6,11 @@
 @import "bootstrap";
 @import "vars";
 @import "mixins";
+@import "colors";
+@import "base";
 @import "faux-modal";
-
-html, body {
-  height: 100%
-}
-
-body {
-  background-color: #EFEFEF;
-  font-size: 9px;
-}
-
-li {
-  list-style-type: none;
-}
-
-input {
-  margin: 0;
-  border: none;
-  text-align: right;
-  background-color: #f3f3f3;
-}
-
-input:focus {
-  outline-color: #333333;
-  outline-width: thin;
-}
-
-button:focus {
-  outline: none;
-}
-
-.flexbox-parent {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.flexbox-item-grow {
-  flex: 1;
-}
-
-.container {
-  width: 1125px;
-  background-color: white;
-  margin-bottom: 40px;
-  padding-bottom: 20px;
-}
-
-.margin-top-sm {
-  margin-top: 3px;
-}
-
-.top-padded {
-  margin-top: 15px;
-}
-
-.bottom-padded {
-  padding-bottom: 5px;
-}
-
-.align-right {
-  text-align: right;
-}
-
-.align-left {
-  text-align: left;
-}
-
-.align-center {
-  text-align: center;
-}
+@import "layout";
+@import "buttons";
 
 .grid-24-across {
   @include column-adjust(24, $grid-gutter-width);
@@ -84,7 +18,7 @@ button:focus {
 
 .notification {
   float: right;
-  color: white;
+  color: $white;
 }
 
 #rental-properties {
@@ -97,137 +31,50 @@ button:focus {
   input {
     border: thin solid lightgray;
     text-align: left;
-    background-color: white;
+    background-color: $white;
   }
 
   .less-spaced {
     padding-left: 1px;
     padding-right: 1px;
   }
-
-  .btn-sm {
-    padding: 5px 15px;
-    font-size: 10px;
-    line-height: 7px;
-    border-radius: 6px;
-  }
-}
-
-.btn-sm {
-  font-size: 10px;
-  background-color: white;
-  border-radius: 0;
-  font-weight: 500;
-  border: 1px solid #5894b9;
-  color: #5894b9;
-  text-align: center;
-  width: 273px;
-  padding: 1px 10px;
-}
-
-.btn-sm:focus {
-  outline: none;
-  font-size: 10px;
-  background-color: white;
-  border-radius: 0;
-  font-weight: 500;
-  border: 1px solid #5894b9;
-  color: #5894b9;
-
-}
-
-.btn-sm:active {
-  background-color: #5894b9;
-  color: white;
-  box-shadow: none;
-  border: 1px solid white;
-}
-
-.btn-sm:active:focus {
-  background-color: #5894b9;
-  color: white;
-  box-shadow: none;
-  border: 1px solid white;
-  outline: 1px auto white;
 }
 
 .navbar {
-  background-color: white;
+  background-color: $light-gray;
   min-height: 20px;
+  margin-top: 5px;
   margin-bottom: 5px;
-
-  a {
-    color: #5894b9;
-  }
-
-  .float-right {
-    float: right;
-  }
-
-  .float-left {
-    float: left;
-  }
-
-  .property-address {
-    float: left;
-    padding-top: 4px;
-    margin-right: 5px;
-  }
-
-  button {
-    width: 90px;
-  }
-
-  .logged-in-user {
-    vertical-align: middle;
-    padding-right: 5px;
-  }
+  border-bottom: none;
 }
 
-.btn-sm:hover {
-  outline: none;
-  font-size: 10px;
-  background-color: white;
-  border-radius: 0;
-  font-weight: 500;
-  border: 1px solid #5894b9;
-  color: #5894b9;
+.property-address {
+  float: left;
+  padding-top: 4px;
+  margin-right: 5px;
+}
+
+.logged-in-user {
+  vertical-align: middle;
+  padding-right: 5px;
 }
 
 .delete-property {
   float: right;
   padding-right: 10px;
-  color: #676767;
+  color: $dark-gray;
 }
 
 .subsection-header {
-  font-weight: bold;
-  background-color: #5894b9;
-  color: white;
+  @extend .column-header;
+  background-color: $blue;
+  color: $white;
 }
 
 .column-header {
   font-weight: bold;
 }
 
-.no-bottom-border {
-  border-bottom: none;
-}
-
-.add-border-bottom {
-  border-bottom: thin #BDBDBD solid;
-}
-
-.add-border-top {
-  border-top: thin #BDBDBD solid;
-}
-
-.double-height {
-  position: absolute !important;
-  height: 28.5px;
-  padding-right: 1px !important;
-}
-
 .dark-gray {
-  color: #676767;
+  color: $dark-gray;
 }
