--- a/app/assets/stylesheets/faux-modal.scss
+++ b/app/assets/stylesheets/faux-modal.scss
@@ -1,11 +1,13 @@
+@import "colors";
+
 .faux-modal {
   margin-left: auto;
   margin-right: auto;
   width: 600px;
   margin-top: 100px;
   height: 200px;
-  background-color: white;
-  color: #5894b9;
+  background-color: $white;
+  color: $blue;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -14,7 +16,7 @@
     height: 20px;
 
     padding: 10px;
-    border: solid 1px #5894b9;
+    border: solid 1px $blue;
     transition: border 0.3s;
 
     text-align: left;
@@ -45,7 +47,7 @@
 
   .invalid-credentials {
     float: right;
-    color: red;
+    color: $red;
     align-self: flex-end;
   }
 
