--- a/app/assets/stylesheets/faux-modal.scss
+++ b/app/assets/stylesheets/faux-modal.scss
@@ -4,6 +4,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
+  width: 600px;
   height: 200px;
   background-color: $white;
   color: $blue;
