Revert "Use % as container width rather than pixels"
This reverts commit f0758dc0aa9c8996c42cd69e1e3c5603046a2427.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,8 +1,7 @@
 @import "colors";
 
 .container {
-  width: 85%;
-  min-width: 1050px;
+  width: 1125px;
   background-color: $white;
   margin-bottom: 40px;
   padding-bottom: 20px;
