Fix property list header styling by shrinking the text down to 9px and setting width at 85%

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,7 +1,8 @@
 @import "colors";
 
 .container {
-  width: 1125px;
+  width: 85%;
+  min-width: 1125px;
   background-color: $white;
   margin-bottom: 40px;
   padding-bottom: 20px;
