Add basic questionnaire with no styling and one question
- change state '/rental_properties' to 'rental_properties'

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -16,6 +16,12 @@ a {
   font-weight: 500;
 }
 
+textarea {
+  width: 60%;
+  margin: auto;
+  height: 60px;
+}
+
 input {
   margin: 0;
   border: none;
