Show the questionnaire on the navbar but not on the properties list page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,6 +65,10 @@
   margin-right: 5px;
 }
 
+.questionnaire-link {
+  @extend .property-address;
+}
+
 .logged-in-user {
   vertical-align: middle;
   padding-right: 5px;
