Add a financials link to go back and forth between the questionnaire and the financials page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,6 +69,10 @@
   @extend .property-address;
 }
 
+.financials-link {
+  @extend .property-address;
+}
+
 .logged-in-user {
   vertical-align: middle;
   padding-right: 5px;
