Add stuff like colors and sign-in styles to the styleguide

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -1,3 +1,17 @@
+/*doc
+---
+title: Typography
+name: typography
+category: typography
+---
+```html_example
+  <div>Raw text with no added style</div>
+```
+```html_example
+  <a>A Link</a>
+```
+*/
+
 @import "_colors.css.scss";
 
 html, body {
