Move styleguide example html to the bottom of less files

--- a/app/assets/stylesheets/_base.css.scss
+++ b/app/assets/stylesheets/_base.css.scss
@@ -1,17 +1,3 @@
-/*doc
----
-title: Typography
-name: typography
-category: typography
----
-```html_example
-  <div>Raw text with no added style</div>
-```
-```html_example
-  <a>A Link</a>
-```
-*/
-
 @import "_colors.css.scss";
 
 html, body {
@@ -41,3 +27,21 @@ input {
     outline-width: thin;
   }
 }
+
+/*doc
+---
+title: Typography
+name: typography
+category: typography
+---
+```html_example
+  <div>Raw text with no added style</div>
+```
+```html_example
+  <div><b>Some bold text</b></div>
+```
+```html_example
+  <a>A Link</a>
+```
+*/
+
