Use sass gem for styleguide styles compilation

--- a/app/assets/stylesheets/_colors.css.scss
+++ b/app/assets/stylesheets/_colors.css.scss
@@ -6,49 +6,30 @@ $black: #555;
 $medium-gray: #AAA;
 $light-gray: #EAEAEA;
 
-/*doc
----
-title: Colors
-name: colors
-category: colors
----
-```html_example
-  <div class="clearfix">
-    <div class="docswatch">
-      <div>Red</div>
-        <div class="swatch-item" style="background-color: red;">
-      </div>
-    </div>
-    <div class="docswatch">
-      <div>White</div>
-        <div class="swatch-item" style="background-color: white;">
-      </div>
-    </div>
-    <div class="docswatch">
-      <div>Blue</div>
-        <div class="swatch-item" style="background-color: #5894b9;">
-      </div>
-    </div>
-    <div class="docswatch">
-      <div>Light Gray</div>
-        <div class="swatch-item" style="background-color: #EAEAEA;">
-      </div>
-    </div>
-    <div class="docswatch">
-      <div>Medium Gray</div>
-        <div class="swatch-item" style="background-color: #AAA;">
-      </div>
-    </div>
-    <div class="docswatch">
-      <div>Dark Gray</div>
-        <div class="swatch-item" style="background-color: #676767;">
-      </div>
-    </div>
-    <div class="docswatch">
-      <div>Black</div>
-        <div class="swatch-item" style="background-color: #555;">
-      </div>
-    </div>
-  </div>
-```
-*/
+.red {
+  background-color: $red;
+}
+
+.white {
+  background-color: $white;
+}
+
+.blue {
+  background-color: $blue;
+}
+
+.light-gray {
+  background-color: $light-gray;
+}
+
+.medium-gray {
+  background-color: $medium-gray;
+}
+
+.dark-gray {
+  background-color: $dark-gray;
+}
+
+.black {
+  background-color: $black;
+}
