--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,8 +4,8 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
-@import "vars";
-@import "mixins";
+@import "_vars.css.scss";
+@import "_mixins.css.scss";
 @import "_colors.css.scss";
 @import "_base.css.scss";
 @import "_faux-modal.css.scss";
@@ -97,194 +97,3 @@
 .dark-gray {
   color: $dark-gray;
 }
-
-/*doc
----
-title: Navbar
-name: navbar
-category: components
----
-```html_example
-  <div class="navbar navbar-default navbar-static-top">
-    <li class="property-address">
-      <a style="padding-left: 5px;">Home</a>
-    </li>
-    <li class="property-address">456 Banana St, Fruitvale, CA 12345</li>
-    <li class="questionnaire-link">
-      <a>Questionnaire</a>
-    </li>
-    <li class="financials-link">
-      <a>Financials</a>
-    </li>
-    <li class="float-right">
-      <span class="logged-in-user">Logged In User</span>
-      <button class="btn btn-default btn-sm">Sign Out</button>
-    </li>
-  </div>
-```
-*/
-
-/*doc
----
-title: Properties List
-name: properties
-category: components
----
-```html_example
-<div id="rental-properties" class="container flexbox-parent" ng-controller="RentalPropertiesListController">
-  <div class="rental-properties-list col-md-10 col-md-offset-1">
-    <div class="row" style="padding-bottom: 5px;">
-        <button class="btn btn-primary btn-sm">New Property</button>
-    </div>
-    <div class="row">
-      <div class="col-sm-2 subsection-header align-left">Street</div>
-      <div class="col-sm-2 subsection-header align-left">City</div>
-      <div class="col-sm-1 subsection-header align-left">State</div>
-      <div class="col-sm-1 subsection-header align-left">Zip Code</div>
-      <div class="col-sm-1 subsection-header align-right">Units</div>
-      <div class="col-sm-1 subsection-header align-right">Cap Rate</div>
-      <div class="col-sm-1 subsection-header align-right">Total Cost</div>
-      <div class="col-sm-3 subsection-header align-right">Actions</div>
-    </div>
-    <div class="row hoverable-row rental-property-summary">
-      <div class="col-sm-2 add-border-bottom">456 Cherry St</div>
-      <div class="col-sm-2 add-border-bottom">Fruitvale</div>
-      <div class="col-sm-1 add-border-bottom">CA</div>
-      <div class="col-sm-1 add-border-bottom">12345</div>
-      <div class="col-sm-1 add-border-bottom align-right"">3</div>
-      <div class="col-sm-1 add-border-bottom align-right"">6.20%</div>
-      <div class="col-sm-1 add-border-bottom align-right"">$439,000</div>
-      <div class="col-sm-3 add-border-bottom align-right">
-        <span class="action glyphicon glyphicon-remove delete-property"></span>
-      </div>
-    </div>
-    <div class="row hoverable-row rental-property-summary">
-      <div class="col-sm-2 add-border-bottom">123 Banana Dr</div>
-      <div class="col-sm-2 add-border-bottom">Fruitvale</div>
-      <div class="col-sm-1 add-border-bottom">CA</div>
-      <div class="col-sm-1 add-border-bottom">12345</div>
-      <div class="col-sm-1 add-border-bottom align-right"">6</div>
-      <div class="col-sm-1 add-border-bottom align-right"">6.20%</div>
-      <div class="col-sm-1 add-border-bottom align-right"">$5,240,000</div>
-      <div class="col-sm-3 add-border-bottom align-right">
-        <span class="action glyphicon glyphicon-remove delete-property"></span>
-      </div>
-    </div>
-    <div class="row hoverable-row rental-property-summary">
-      <div class="col-sm-2 add-border-bottom">789 Apple Ln</div>
-      <div class="col-sm-2 add-border-bottom">Fruitvale</div>
-      <div class="col-sm-1 add-border-bottom">CA</div>
-      <div class="col-sm-1 add-border-bottom">12345</div>
-      <div class="col-sm-1 add-border-bottom align-right"">16</div>
-      <div class="col-sm-1 add-border-bottom align-right"">9.10%</div>
-      <div class="col-sm-1 add-border-bottom align-right"">$9,999,000</div>
-      <div class="col-sm-3 add-border-bottom align-right">
-        <span class="action glyphicon glyphicon-remove delete-property"></span>
-      </div>
-    </div>
-  </div>
-</div>
-```
-*/
-
-/*doc
----
-title: Questionnaire Item
-name: inputs
-category: components
----
-```html_example
-  <div class="questionnaire">
-    <div>Questionnaire question prompt</div>
-    <textarea></textarea>
-  </div>
-```
-*/
-
-/*doc
----
-title: Authentication Faux Modal
-name: auth
-category: components
----
-```html_example
-  <div class="faux-modal">
-    <div class="centered sign-in">
-      <form role="form">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email"
-                 name="email"
-                 id="email"
-                 required="required"
-                 class="form-control">
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password"
-                 name="password"
-                 id="password"
-                 required="required"
-                 class="form-control">
-        </div>
-
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Sign In</button>
-          <button class="btn btn-primary btn-sm sign-in-btn">Sign Up</button>
-        </div>
-
-        <div class="invalid-credentials">This message shows if there is an error</div>
-      </form>
-    </div>
-  </div>
-```
-*/
-
-/*doc
----
-title: Registration Faux Modal
-name: reg
-category: components
----
-```html_example
-  <div class="faux-modal">
-    <div class="centered">
-      <form role="form">
-        <div class="form-group">
-          <label for="email">Email</label>
-          <input type="email"
-                 name="email"
-                 id="email"
-                 required="required"
-                 class="form-control">
-        </div>
-
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password"
-                 name="password"
-                 id="password"
-                 required="required"
-                 class="form-control">
-        </div>
-
-        <div class="form-group">
-          <label for="password_confirmation">Confirm Password</label>
-          <input type="password"
-                 name="password_confirmation"
-                 id="password_confirmation"
-                 required="required"
-                 class="form-control">
-        </div>
-
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary btn-sm sign-in-btn">Register</button>
-        </div>
-
-        <div class="invalid-credentials">This message shows if there is an error</div>
-      </form>
-    </div>
-  </div>
-```
-*/
