--- a/app/assets/stylesheets/styleguide/components/registration_modal.css.scss
+++ b/app/assets/stylesheets/styleguide/components/registration_modal.css.scss
@@ -6,7 +6,7 @@ category: components
 ---
 ```html_example
   <div class="faux-modal">
-    <div class="centered">
+    <div class="auth-modal">
       <form role="form">
         <div class="form-group">
           <label for="email">Email</label>
